...
            )
            ErrorTextM3(isValid = passwordState.isValid, errorMessage = passwordState.errorMessage)

            OutlinedTextField(
                value = confirmPasswordState.value,
                onValueChange = viewModel::onConfirmPasswordChange,
                label = { Text("비밀번호 확인") },
                isError = !uiState.passwordsMatch && confirmPasswordState.value.isNotEmpty(),
                visualTransformation = PasswordVisualTransformation(),
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Password,
                    imeAction = ImeAction.Done
                ),
...
